--- a/TowerOfHanoi_Universal_App/TowerOfHanoi_Universal_App.WindowsPhone/Views/GamePage.xaml
+++ b/TowerOfHanoi_Universal_App/TowerOfHanoi_Universal_App.WindowsPhone/Views/GamePage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
     <Page.Background>
-        <ImageBrush ImageSource="{Binding GameSettings.GameTheme, Converter={StaticResource ThemeConverter}}" Stretch="UniformToFill" />
+        <ImageBrush ImageSource="{Binding GameSettings.GameTheme, Converter={StaticResource ThemeConverter}, Mode=OneWay}" Stretch="UniformToFill" />
     </Page.Background>
 
     <Page.Resources>
@@ -217,7 +217,7 @@
             <VariableSizedWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="3"/>
         </ItemsPanelTemplate>
         <DataTemplate x:Key="Narrow150x250ItemTemplate">
-            <Rectangle RadiusX="10" RadiusY="10" Height="34" Width="{Binding Width,Converter={StaticResource DiskWidthConverter},ConverterParameter=0}" Fill="{Binding Brush}" AllowDrop="{Binding IsDraggable}" />
+            <Rectangle RadiusX="10" RadiusY="10" Height="34" Width="{Binding Width,Converter={StaticResource DiskWidthConverter},ConverterParameter=0, Mode=OneWay}" Fill="{Binding Brush}" AllowDrop="{Binding IsDraggable}" />
         </DataTemplate>
 
     </Page.Resources>
@@ -300,7 +300,7 @@
                     </AppBarButton.Flyout>
                 </AppBarButton>
                 <AppBarButton Grid.Row="0" Grid.Column="1"
-                    Icon="{Binding GameSettings.IsGameSoundEnabled, Converter={StaticResource IconConverter}}"
+                    Icon="{Binding GameSettings.IsGameSoundEnabled, Converter={StaticResource IconConverter}, Mode=OneWay}"
                     Label="sound"
                     Command="{Binding GameSoundSettingsCommand}"/>
                 <AppBarButton Grid.Row="1" Grid.Column="0"
@@ -473,7 +473,7 @@
                                             <StackPanel DataContext="{Binding}" Orientation="Horizontal">
                                                 <TextBlock Style="{ThemeResource TowerOfHanoiLeaderBoardTextStyle}" Text="{Binding Level}"/>
                                                 <TextBlock Style="{ThemeResource TowerOfHanoiLeaderBoardTextStyle}" Text="{Binding BestMoves}"/>
-                                                <TextBlock Style="{ThemeResource TowerOfHanoiLeaderBoardTextStyle}" Text="{Binding PlayerMoves, Converter={StaticResource PlayerMoveConverter}}"/>
+                                                <TextBlock Style="{ThemeResource TowerOfHanoiLeaderBoardTextStyle}" Text="{Binding PlayerMoves, Converter={StaticResource PlayerMoveConverter}, Mode=OneWay}"/>
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListView.ItemTemplate>
@@ -519,19 +519,19 @@
             <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image Source="ms-appx:///Assets/Cloud2.png" Stretch="Fill" />
                 <TextBlock x:Name="TxtBestMoves"
-                       Text="{Binding BestMoves, Converter={StaticResource GameValueConverter},ConverterParameter=1}"
+                       Text="{Binding BestMoves, Converter={StaticResource GameValueConverter},ConverterParameter=1, Mode=OneWay}"
                        Style="{ThemeResource TowerOfHanoiPhoneInfoTextBlockStyle}"/>
             </Grid>
             <Grid Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image Source="ms-appx:///Assets/Cloud2.png" Stretch="Fill" />
                 <TextBlock x:Name="TxtCurrentLevel"
-                       Text="{Binding CurrentLevel, Converter={StaticResource GameValueConverter},ConverterParameter=2}"
+                       Text="{Binding CurrentLevel, Converter={StaticResource GameValueConverter},ConverterParameter=2, Mode=OneWay}"
                        Style="{ThemeResource TowerOfHanoiPhoneInfoTextBlockStyle}"/>
             </Grid>
             <Grid Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image Source="ms-appx:///Assets/Cloud2.png" Stretch="Fill" />
                 <TextBlock x:Name="TxtPlayerMoves"
-                       Text="{Binding PlayerMoves, Converter={StaticResource GameValueConverter},ConverterParameter=3}"
+                       Text="{Binding PlayerMoves, Converter={StaticResource GameValueConverter},ConverterParameter=3, Mode=OneWay}"
                        Style="{ThemeResource TowerOfHanoiPhoneInfoTextBlockStyle}"/>
             </Grid>
 
